model/V16/REPORT.md
# V16 季度滚动 MLP baseline：训练、回测与资源报告

**状态：16/16 个季度×折模型完成。** 打分窗口固定为 2025-07-01 至 2026-06-30，仅2025Q3、2025Q4、2026Q1、2026Q2；此范围同样适用于以后版本。打分产物（`ensemble/year=*`）覆盖**全推演窗** 2025-07-01 ~ 2026-09-18（尾段留给增量推演）；下面的评价与回测**只用四季度**那一段。

主结果使用四折打分**直接相加**（不归一化）；策略在运行前固定，未根据测试收益挑选模型、季度或种子。四折使用同一测试窗，不能视为四段独立年份。

## 1. 基线与季度结果

### ★ 主评估指标（1d 口径）

口径：期限**全部取 1d**；IC = **1d RankIC**（逐日截面 Spearman 的日均值）；top 收益 = **Σtop1**（可执行、无摩擦、**累加**）；稳定性 = 逐日 top1 收益的**均值 ÷ 标准差**（×√242 即年化）。季度行只用**该季度**的逐日序列，总计行用**全年** —— 不是把四个季度再加权平均。

|  | IC (1d RankIC) | ICIR | top 收益 (Σtop1) | top 收益稳定性 | 交易日 |
|---|---|---|---|---|---|
| 2025Q3 | +0.0457 | 0.481 | +0.1942 | 0.104 | 66 |
| 2025Q4 | +0.0540 | 0.515 | +0.6663 | 0.283 | 60 |
| 2026Q1 | +0.0541 | 0.495 | -0.0874 | -0.063 | 56 |
| 2026Q2 | +0.0028 | 0.018 | -0.1053 | -0.054 | 60 |
| **总计** | +0.0391 | 0.328 | +0.6679 | 0.086 | 242 |

（下面表里的 **5d RankIC 是参考** —— 它与训练标签匹配，不是交易口径。）

Baseline：T日收盘生成分数，T+1开盘买top1，T+2开盘按最新排名换仓；相同目标继续持有，避免无意义的重复买卖。可执行无摩擦指标Σtop1为逐日1d标签求和；下面“净收益”是10万元现金账户含费用模拟，两者不能混用。

| 季度 | 信号日 | 5d RankIC | Σtop1 | 净收益 | 最大回撤 | 日频夏普 | 日胜率 | 费用/元 | 成交笔数 |
|---|---|---|---|---|---|---|---|---|---|
| 2025Q3 | 66 | +0.0638 | +0.1942 | +8.52% | -12.44% | 0.95 | +51.52% | 5,767.61 | 109 |
| 2025Q4 | 60 | +0.0752 | +0.6663 | +71.70% | -15.83% | 4.35 | +53.33% | 6,808.98 | 92 |
| 2026Q1 | 56 | +0.0932 | -0.0874 | -16.14% | -23.48% | -1.63 | +41.07% | 6,737.72 | 78 |
| 2026Q2 | 60 | -0.0005 | -0.1053 | -18.04% | -26.99% | -1.36 | +44.26% | 6,200.11 | 89 |

全年 baseline 净收益 **+28.07%**，最大回撤 **-41.31%**；Σtop1 **+0.6679**，剔除最好2日后 **+0.3601**。

季度按发出交易指令的信号日归属；跨季执行和末尾清仓顺延仍归入对应信号季度。资金跨季连续，已断言四个季度净收益连乘与全年净收益一致。信号范围没有扩展，最后成交/估值日可晚于6月30日。

## 2. 不同策略的时间曲线

![各策略含费用收益与回撤](model_pred/charts/ensemble_cash_curves.png)

![可执行无摩擦收益累加](model_pred/charts/ensemble_costfree_curves.png)

![全部策略对比](model_pred/charts/ensemble_strategy_compare.png)

### 全部策略（集成分数，按全年净收益排序）

| 策略 | 全年净收益 | vs baseline | 最大回撤 | 日频夏普 | 费用/元 | 成交笔数 | 末尾未平仓 |
|---|---|---|---|---|---|---|---|
| Top1 隔日换手（baseline） | +28.07% | +0.00% | -41.31% | 0.76 | 25,514.43 | 368 | 0 |
| 排名退出 · 前1000名 · 持2只 / 最少2日 | +15.37% | -12.70% | -25.99% | 0.59 | 577.34 | 18 | 0 |
| 排名退出 · 前600名 · 持2只 / 最少2日 | +14.29% | -13.78% | -34.31% | 0.54 | 1,097.57 | 32 | 0 |
| Top5 每1交易日 | +4.96% | -23.11% | -33.56% | 0.31 | 17,109.14 | 1360 | 0 |
| Top5 每1交易日 | -0.68% | -28.75% | -35.58% | 0.13 | 19,713.56 | 1602 | 0 |
| Top5 每20交易日 | -2.53% | -30.60% | -25.45% | 0.06 | 1,354.08 | 124 | 0 |
| 排名退出 · 前300名 · 持5只 / 最少2日 | -4.27% | -32.34% | -34.42% | -0.00 | 1,159.86 | 96 | 0 |
| 排名退出 · 前300名 · 持2只 / 最少2日 | -6.08% | -34.15% | -34.29% | 0.01 | 1,197.39 | 40 | 0 |
| 排名退出 · 前300名 · 跳过前1名 · 持2只 / 最少2日 | -6.08% | -34.15% | -34.29% | 0.01 | 1,197.39 | 40 | 0 |
| 排名退出 · 前600名 · 持2只 / 最少2日 · 止损8% · 移动止盈15% | -6.74% | -34.81% | -37.35% | -0.02 | 1,368.64 | 48 | 0 |
| Top5 每5交易日 | -7.21% | -35.28% | -36.84% | -0.10 | 4,547.61 | 390 | 0 |
| 排名退出 · 前300名 · 持2只 / 最少2日 · 移动止盈15% | -8.55% | -36.61% | -35.87% | -0.07 | 1,423.41 | 48 | 0 |
| 排名退出 · 前300名 · 持2只 / 最少2日 · 止损8% | -12.98% | -41.05% | -39.79% | -0.20 | 1,615.91 | 58 | 0 |
| 排名退出 · 前300名 · 持1只 / 最少2日 | -14.93% | -43.00% | -42.75% | -0.21 | 802.65 | 14 | 0 |
| 排名退出 · 前300名 · 持2只 / 最少2日 · 止损8% · 移动止盈15% | -16.24% | -44.31% | -42.19% | -0.29 | 1,662.17 | 60 | 0 |
| 排名退出 · 前100名 · 持1只 / 最少2日 | -40.43% | -68.49% | -48.73% | -1.02 | 1,656.27 | 36 | 0 |
| 排名退出 · 前100名 · 跳过前1名 · 持1只 / 最少2日 | -40.43% | -68.49% | -48.73% | -1.02 | 1,656.27 | 36 | 0 |

### 跨折普适性（同一策略跑四折各自的打分）

| 策略 | 折数 | 超 baseline 折数 | 四折中位净收益 | 集成净收益 |
|---|---|---|---|---|
| 排名退出 · 前1000名 · 持2只 / 最少2日 | 4 | 4/4 | +20.18% | +15.37% |
| 排名退出 · 前600名 · 持2只 / 最少2日 | 4 | 4/4 | +36.30% | +14.29% |
| 排名退出 · 前300名 · 持5只 / 最少2日 | 4 | 4/4 | +9.20% | -4.27% |
| 排名退出 · 前300名 · 持2只 / 最少2日 | 4 | 4/4 | +15.82% | -6.08% |
| 排名退出 · 前300名 · 跳过前1名 · 持2只 / 最少2日 | 4 | 4/4 | +15.82% | -6.08% |
| 排名退出 · 前600名 · 持2只 / 最少2日 · 止损8% · 移动止盈15% | 4 | 4/4 | +33.81% | -6.74% |
| 排名退出 · 前300名 · 持2只 / 最少2日 · 移动止盈15% | 4 | 4/4 | +4.25% | -8.55% |
| 排名退出 · 前300名 · 持2只 / 最少2日 · 止损8% | 4 | 4/4 | +4.91% | -12.98% |
| 排名退出 · 前300名 · 持1只 / 最少2日 | 4 | 4/4 | +9.23% | -14.93% |
| 排名退出 · 前300名 · 持2只 / 最少2日 · 止损8% · 移动止盈15% | 4 | 4/4 | +3.36% | -16.24% |
| 排名退出 · 前100名 · 持1只 / 最少2日 | 4 | 4/4 | -3.24% | -40.43% |
| 排名退出 · 前100名 · 跳过前1名 · 持1只 / 最少2日 | 4 | 4/4 | -3.24% | -40.43% |
| Top5 每1交易日 | 4 | 3/4 | +0.65% | +4.96% |
| Top5 每1交易日 | 4 | 3/4 | +0.95% | -0.68% |
| Top5 每20交易日 | 4 | 3/4 | -3.85% | -2.53% |
| Top5 每5交易日 | 4 | 3/4 | +3.66% | -7.21% |
| Top1 隔日换手（baseline） | 4 | 0/4 | -30.30% | +28.07% |

★ 这张表是"普遍有效"的证据：只对集成分数有效、在四折上全输的策略，不能当结论。

### 统一季度策略矩阵（baseline 组 + 集成净收益前 4 的排名退出策略）

| 季度 | 策略 | 净收益 | 最大回撤 | 日频夏普 | 费用/元 | 成交笔数 |
|---|---|---|---|---|---|---|
| 2025Q3 | 排名退出 · 前1000名 · 持2只 / 最少2日 | +11.58% | -8.15% | 1.60 | 81.63 | 4 |
| 2025Q3 | 排名退出 · 前300名 · 持2只 / 最少2日 | +6.45% | -7.31% | 1.00 | 136.99 | 6 |
| 2025Q3 | 排名退出 · 前300名 · 持5只 / 最少2日 | +9.13% | -7.11% | 1.55 | 221.08 | 23 |
| 2025Q3 | 排名退出 · 前600名 · 持2只 / 最少2日 | +6.45% | -7.31% | 1.00 | 136.99 | 6 |
| 2025Q3 | Top1 隔日换手（baseline） | +8.52% | -12.44% | 0.95 | 5,767.61 | 109 |
| 2025Q3 | Top5 每1交易日 | +7.88% | -9.19% | 1.45 | 4,089.49 | 379 |
| 2025Q3 | Top5 每20交易日 | +1.18% | -8.02% | 0.30 | 338.87 | 35 |
| 2025Q3 | Top5 每5交易日 | +7.87% | -7.51% | 1.43 | 1,215.30 | 115 |
| 2025Q4 | 排名退出 · 前1000名 · 持2只 / 最少2日 | +12.37% | -16.14% | 1.52 | 190.99 | 6 |
| 2025Q4 | 排名退出 · 前300名 · 持2只 / 最少2日 | +19.35% | -17.03% | 1.94 | 430.68 | 14 |
| 2025Q4 | 排名退出 · 前300名 · 持5只 / 最少2日 | +20.50% | -10.76% | 3.02 | 455.55 | 36 |
| 2025Q4 | 排名退出 · 前600名 · 持2只 / 最少2日 | +42.28% | -16.22% | 3.46 | 346.78 | 10 |
| 2025Q4 | Top1 隔日换手（baseline） | +71.70% | -15.83% | 4.35 | 6,808.98 | 92 |
| 2025Q4 | Top5 每1交易日 | +21.10% | -11.04% | 2.78 | 4,465.78 | 350 |
| 2025Q4 | Top5 每20交易日 | +13.16% | -11.35% | 1.75 | 290.61 | 26 |
| 2025Q4 | Top5 每5交易日 | +23.68% | -10.51% | 3.15 | 1,267.78 | 100 |
| 2026Q1 | 排名退出 · 前1000名 · 持2只 / 最少2日 | +2.85% | -16.68% | 0.52 | 69.04 | 2 |
| 2026Q1 | 排名退出 · 前300名 · 持2只 / 最少2日 | -14.88% | -25.44% | -1.55 | 389.28 | 12 |
| 2026Q1 | 排名退出 · 前300名 · 持5只 / 最少2日 | -8.57% | -21.80% | -0.97 | 291.62 | 22 |
| 2026Q1 | 排名退出 · 前600名 · 持2只 / 最少2日 | -8.37% | -20.76% | -0.79 | 378.32 | 10 |
| 2026Q1 | Top1 隔日换手（baseline） | -16.14% | -23.48% | -1.63 | 6,737.72 | 78 |
| 2026Q1 | Top5 每1交易日 | +6.68% | -12.99% | 1.01 | 4,566.92 | 318 |
| 2026Q1 | Top5 每20交易日 | -3.32% | -18.09% | -0.30 | 356.09 | 30 |
| 2026Q1 | Top5 每5交易日 | -13.58% | -23.11% | -1.72 | 1,042.74 | 82 |
| 2026Q2 | 排名退出 · 前1000名 · 持2只 / 最少2日 | -10.53% | -25.99% | -0.98 | 235.68 | 6 |
| 2026Q2 | 排名退出 · 前300名 · 持2只 / 最少2日 | -13.16% | -26.59% | -1.30 | 240.44 | 8 |
| 2026Q2 | 排名退出 · 前300名 · 持5只 / 最少2日 | -20.39% | -30.60% | -2.56 | 191.61 | 15 |
| 2026Q2 | 排名退出 · 前600名 · 持2只 / 最少2日 | -17.65% | -34.31% | -1.93 | 235.48 | 6 |
| 2026Q2 | Top1 隔日换手（baseline） | -18.04% | -26.99% | -1.36 | 6,200.11 | 89 |
| 2026Q2 | Top5 每1交易日 | -24.69% | -30.44% | -2.88 | 3,986.96 | 313 |
| 2026Q2 | Top5 每20交易日 | -11.95% | -21.74% | -1.50 | 368.50 | 33 |
| 2026Q2 | Top5 每5交易日 | -19.52% | -25.99% | -2.34 | 1,021.79 | 93 |

## 3. 四折稳定性与评价口径

| 来源 | 5d RankIC | ICIR | Σtop1 | 去最好2日Σtop1 | baseline净收益 | 最大回撤 |
|---|---|---|---|---|---|---|
| fold1 | +0.0467 | 0.458 | +0.3934 | +0.1034 | -14.70% | -34.30% |
| fold2 | +0.0305 | 0.308 | +0.3616 | +0.0646 | -16.77% | -47.85% |
| fold3 | +0.0599 | 0.566 | -0.2097 | -0.4361 | -43.82% | -62.97% |
| fold4 | +0.0557 | 0.493 | -0.3544 | -0.5893 | -52.76% | -57.87% |
| ensemble | +0.0575 | 0.519 | +0.6679 | +0.3601 | +28.07% | -41.31% |

- 固定存续、从未ST的2115只股票池存在幸存者偏差；报告不能解释为无偏的全市场实盘收益。
- 次日开盘触及主板限价即保守拒单，停牌拒单；不使用次日全天high/low选择开盘成交。
- 10万元、最多5只、100股整手、T+1；佣金万2.5且最低5元、卖出印花万5、过户万0.1、双边滑点3bp。
- 单笔买入不超过信号日成交额1%；未成交资金留现金，不偷看成交日全天成交额。建仓按1/N预算，持有后权重自然漂移，同票不强制卖买回权重。
- 公司行为用复权比折算经济股数，假设分红立即再投资；这是含费用现金账户模拟，不是逐笔公司行为现金账复原。
- 日频夏普按242日年化，只作描述；季度样本短，不代表稳定预期收益。

## 4. 训练配置与完成记录

用户指定MLP-4linear（337→256→128→32→1）；WPCC权重由预测排名决定，保持参考脚本公式。特征已是当日rank，固定中心化和缺失填0.5；5d单头，batch=4个日截面，AdamW lr=.001、weight_decay=.02，最多30轮。

每季度从2018起扩展训练历史，季度前6个交易日隔离；四个历史验证块轮换并purge/embargo。val_wei=100×可执行top5的5d标签代理收益+0.7×逐日Pearson IC；只用于验证选epoch，测试不参与选择。调度factor=.5/patience=3/cooldown=2/min_lr=5e-6；6轮未改善早停，种子3253–3256。

| 季度 | 折 | 训练日 | 验证日 | 测试日 | 轮数 | 最佳轮 | 逐轮训练验证秒 | 平均秒/轮 | 进程峰值RSS/GiB |
|---|---|---|---|---|---|---|---|---|---|
| 2025Q3 | 1 | 1351 | 447 | 66 | 9 | 3 | 92.8 | 10.31 | 8.38 |
| 2025Q3 | 2 | 1345 | 447 | 66 | 10 | 4 | 101.1 | 10.11 | 8.39 |
| 2025Q3 | 3 | 1346 | 446 | 66 | 7 | 1 | 71.4 | 10.20 | 8.39 |
| 2025Q3 | 4 | 1352 | 446 | 66 | 8 | 2 | 85.9 | 10.73 | 8.38 |
| 2025Q4 | 1 | 1401 | 463 | 60 | 8 | 2 | 84.3 | 10.53 | 8.38 |
| 2025Q4 | 2 | 1395 | 463 | 60 | 10 | 4 | 105.5 | 10.55 | 8.39 |
| 2025Q4 | 3 | 1395 | 463 | 60 | 8 | 2 | 83.2 | 10.40 | 8.39 |
| 2025Q4 | 4 | 1401 | 463 | 60 | 7 | 1 | 71.7 | 10.25 | 8.38 |
| 2026Q1 | 1 | 1446 | 478 | 56 | 10 | 4 | 110.7 | 11.07 | 8.39 |
| 2026Q1 | 2 | 1440 | 478 | 56 | 12 | 6 | 133.2 | 11.10 | 8.39 |
| 2026Q1 | 3 | 1440 | 478 | 56 | 10 | 4 | 105.2 | 10.52 | 8.39 |
| 2026Q1 | 4 | 1446 | 478 | 56 | 8 | 2 | 89.3 | 11.16 | 8.38 |
| 2026Q2 | 1 | 1488 | 492 | 60 | 10 | 4 | 113.6 | 11.36 | 8.39 |
| 2026Q2 | 2 | 1482 | 492 | 60 | 7 | 1 | 81.9 | 11.71 | 8.84 |
| 2026Q2 | 3 | 1482 | 492 | 60 | 7 | 1 | 81.1 | 11.58 | 8.83 |
| 2026Q2 | 4 | 1488 | 492 | 60 | 7 | 1 | 80.1 | 11.44 | 8.39 |

RSS为各折工作进程生命周期内的系统高水位，后续季度会继承同一进程此前峰值；不能把16个RSS直接相加当容器峰值。逐轮耗时来自完整history，包含恢复断点前已完成轮次，不含数据读取/落盘/最终预测。

## 5. 资源与计算效率

环境：Python 3.14.7，PyTorch 2.14.0+cu130；CPU 配额 25 核、内存硬上限 90 GiB（均现读 cgroup，不写死主机数字）。先4并发，后按用户要求提高到8任务上限；切换时剩6个任务，实际最高6并发，每进程CPU亲和限制为3核。训练结束后才分析。

| 资源/效率项 | 实测值 |
|---|---|
| 活跃运行墙钟合计（不含切换暂停） | 11.80 分钟 |
| 容器总内存采样峰值（含页缓存） | 52.08 GiB / 90 GiB |
| 容器不可回收anon采样峰值 | 47.64 GiB |
| 单工作进程最大RSS高水位 | 8.84 GiB |
| 显存采样峰值 | 4.80 GiB |
| GPU利用率采样均值/峰值 | 49.4% / 100.0% |
| 平均使用CPU核数 | 3.16 / 25 |
| CPU累计使用 | 2236.9 核秒 |
| 完成训练轮数 | 138 |
| 平均/中位单轮耗时 | 10.80 / 10.79 秒 |
| 季度×折训练耗时之和 | 24.85 分钟 |
| 每小时完成模型数 | 81.35 |
| 按全网格计的训练吞吐 | 584,677 股票行·轮/秒（上界，含被掩码剔除行） |
| 本轮新增OOM kill | 0 |

### 并发阶段实测

| 阶段 | 活跃分钟 | 内存峰值/GiB | anon峰值/GiB | 显存峰值/GiB | GPU均值 | 平均CPU核 |
|---|---|---|---|---|---|---|
| 4并发（按用户要求中途切换） | 6.30 | 36.45 | 32.10 | 3.21 | 69.0% | 3.56 |
| 上限8/实际6并发阶段 | 5.50 | 52.08 | 47.64 | 4.80 | 27.0% | 2.70 |

4并发阶段已完成轮次的平均耗时为 10.54 秒/轮；扩并发后新增轮次为 11.48 秒/轮。两阶段季度、剩余轮数、加载开销不同，只作运行观察，不能当严格的4→8加速实验。实际没有满8任务同时运行。

![资源使用曲线](model_pred/charts/resource_usage.png)

容器/GPU数据每2秒采样，因此采样峰值可能低于瞬时峰值；该内核没有memory.peak文件。容器数据包含同容器其他进程。并行耗时之和/墙钟不是严格加速比：没有相同任务的串行对照；不据此声称加速倍数。

## 6. 验证、锚点与复现

数据锚点：`798ccb32214853a8`。模型来源锁定**配方与各数据块SHA**（不哈希源码字节）；原四块训练数据未重建。价格/标签逐格对拍、WPCC参考公式及数值梯度、季度/验证隔离、费用/整手/T+1/卖不出顺延、季度收益复合检查均通过。完成16组模型重载/当日独立推理对拍。

```bash
cd /autodl-fs/data/model/V16
bash train.sh                       # 训练 + 推演 + 评价 + 本报告
/autodl-fs/data/miniconda3/bin/python model.py --rescore   # 只重推演、不重训（口径改动后刷新打分）
```

统一产物：`model_pred/tables/`（`report.json`、`quarterly_summary.csv`、`quarterly_costfree.csv`、`strategy_summary.csv`）；逐日曲线/成交/预测在各source目录；资源原始样本在`logs/resource_usage.csv`，摘要在`logs/resource_summary.json`。
