model/V76/REPORT.md
# V76 季度滚动模型：训练、回测与资源报告

**状态：16/16 个季度×折模型完成。** 打分窗口固定为 2025-07-01 至 2026-06-30，仅2025Q3、2025Q4、2026Q1、2026Q2；此范围同样适用于以后版本。打分产物（`ensemble/year=*`）覆盖**全推演窗** 2025-07-01 ~ 2026-09-21（尾段留给增量推演）；下面的评价与回测**只用四季度**那一段。

主结果使用四折打分**直接相加**（不归一化）；策略在运行前固定，未根据测试收益挑选模型、季度或种子。四折使用同一测试窗，不能视为四段独立年份。

本版本预先登记的实验：0交易日半衰期（0表示不加权）；全部结果均属于研究窗内比较，不能称为独立未见验证。

## 1. 基线与季度结果

### ★ 主评估指标（1d 口径）

口径：期限**全部取 1d**；IC = **1d RankIC**（逐日截面 Spearman 的日均值）；top 收益 = **Σtop1**（可执行、无摩擦、**累加**）；稳定性 = 逐日 top1 收益的**均值 ÷ 标准差**（×√242 即年化）。季度行只用**该季度**的逐日序列，总计行用**全年** —— 不是把四个季度再加权平均。

|  | IC (1d RankIC) | ICIR | top 收益 (Σtop1) | top 收益稳定性 | 交易日 |
|---|---|---|---|---|---|
| 2025Q3 | +0.0476 | 0.485 | +0.1606 | 0.081 | 66 |
| 2025Q4 | +0.0597 | 0.531 | +0.4020 | 0.245 | 60 |
| 2026Q1 | +0.0499 | 0.486 | -0.2902 | -0.153 | 56 |
| 2026Q2 | +0.0030 | 0.020 | +0.0245 | 0.012 | 60 |
| **总计** | +0.0401 | 0.336 | +0.2969 | 0.038 | 242 |

（下面表里的 **5d RankIC 是参考** —— 它与训练标签匹配，不是交易口径。）

Baseline：T日收盘生成分数，T+1开盘买top1，T+2开盘按最新排名换仓；相同目标继续持有，避免无意义的重复买卖。可执行无摩擦指标Σtop1为逐日1d标签求和；下面“净收益”是10万元现金账户含费用模拟，两者不能混用。

| 季度 | 信号日 | 5d RankIC | Σtop1 | 净收益 | 最大回撤 | 日频夏普 | 日胜率 | 费用/元 | 成交笔数 |
|---|---|---|---|---|---|---|---|---|---|
| 2025Q3 | 66 | +0.0630 | +0.1606 | +7.06% | -12.96% | 0.84 | +43.94% | 4,623.81 | 85 |
| 2025Q4 | 60 | +0.0824 | +0.4020 | +35.23% | -9.73% | 3.04 | +50.00% | 5,752.99 | 88 |
| 2026Q1 | 56 | +0.0890 | -0.2902 | -31.38% | -37.22% | -2.63 | +42.86% | 3,639.58 | 56 |
| 2026Q2 | 60 | -0.0018 | +0.0245 | -5.89% | -27.70% | -0.27 | +45.90% | 3,586.17 | 71 |

全年 baseline 净收益 **-6.51%**，最大回撤 **-46.00%**；Σtop1 **+0.2969**，剔除最好2日后 **+0.0252**。

季度按发出交易指令的信号日归属；跨季执行和末尾清仓顺延仍归入对应信号季度。资金跨季连续，已断言四个季度净收益连乘与全年净收益一致。信号范围没有扩展，最后成交/估值日可晚于6月30日。

## 2. 不同策略的时间曲线

![各策略含费用收益与回撤](model_pred/charts/ensemble_cash_curves.png)

![可执行无摩擦收益累加](model_pred/charts/ensemble_costfree_curves.png)

![全部策略对比](model_pred/charts/ensemble_strategy_compare.png)

### 全部策略（集成分数，按全年净收益排序）

| 策略 | 全年净收益 | vs baseline | 最大回撤 | 日频夏普 | 费用/元 | 成交笔数 | 末尾未平仓 |
|---|---|---|---|---|---|---|---|
| 排名退出 · 前700名 · 持5只 / 最少5日 · 止损8% | +49.25% | +55.76% | -11.36% | 2.04 | 1,544.37 | 108 | 0 |
| 排名退出 · 前700名 · 持5只 / 最少5日 | +43.85% | +50.36% | -11.93% | 1.86 | 1,432.33 | 102 | 0 |
| 排名退出 · 前800名 · 持5只 / 最少5日 | +43.85% | +50.36% | -11.93% | 1.86 | 1,432.33 | 102 | 0 |
| 排名退出 · 前1500名 · 持5只 / 最少5日 | +41.64% | +48.15% | -20.51% | 1.40 | 671.49 | 50 | 0 |
| 排名退出 · 前1000名 · 持5只 / 最少5日 | +41.35% | +47.86% | -11.37% | 1.81 | 1,286.15 | 94 | 0 |
| 排名退出 · 前1500名 · 持5只 / 最少5日 | +40.84% | +47.34% | -11.60% | 1.77 | 1,161.36 | 84 | 0 |
| 排名退出 · 前600名 · 持5只 / 最少5日 | +36.23% | +42.74% | -14.03% | 1.62 | 1,549.67 | 114 | 0 |
| 排名退出 · 前500名 · 持5只 / 最少5日 | +32.47% | +38.98% | -16.44% | 1.47 | 1,536.43 | 114 | 0 |
| 排名退出 · 前500名 · 持5只 / 最少5日 | +31.91% | +38.42% | -16.44% | 1.46 | 1,534.69 | 114 | 0 |
| 排名退出 · 前600名 · 持5只 / 最少5日 | +31.30% | +37.81% | -28.04% | 1.12 | 1,084.09 | 78 | 0 |
| 排名退出 · 前600名 · 持2只 / 最少2日 | +28.66% | +35.17% | -37.00% | 0.86 | 1,272.82 | 34 | 0 |
| 排名退出 · 前500名 · 持5只 / 最少5日 · 止损8% | +28.20% | +34.71% | -20.60% | 1.31 | 1,502.36 | 114 | 0 |
| 排名退出 · 前500名 · 持5只 / 最少5日 | +26.95% | +33.46% | -31.36% | 0.98 | 1,195.66 | 84 | 0 |
| 排名退出 · 前400名 · 持5只 / 最少5日 | +26.51% | +33.02% | -13.61% | 1.27 | 1,404.50 | 110 | 0 |
| 排名退出 · 前500名 · 持5只 / 最少5日 · 止损8% | +26.05% | +32.56% | -25.31% | 0.96 | 1,762.64 | 128 | 0 |
| 排名退出 · 前500名 · 跳过前1名 · 持5只 / 最少5日 | +24.80% | +31.31% | -23.05% | 1.02 | 1,426.63 | 108 | 0 |
| 排名退出 · 前500名 · 持5只 / 最少5日 | +24.77% | +31.28% | -31.10% | 0.93 | 1,184.30 | 84 | 0 |
| 排名退出 · 前500名 · 持5只 / 最少5日 · 止损8% | +24.55% | +31.06% | -20.60% | 1.18 | 1,499.04 | 114 | 0 |
| 排名退出 · 前500名 · 持5只 / 最少5日 · 止损8% | +23.97% | +30.48% | -26.27% | 0.89 | 1,685.03 | 124 | 0 |
| 排名退出 · 前500名 · 持5只 / 最少5日 · 止损10% | +23.89% | +30.40% | -25.02% | 0.91 | 1,603.96 | 122 | 0 |
| 排名退出 · 前2000名 · 持5只 / 最少5日 | +21.98% | +28.49% | -11.57% | 1.06 | 802.98 | 66 | 0 |
| 排名退出 · 前700名 · 持5只 / 最少5日 | +18.46% | +24.97% | -28.26% | 0.76 | 933.09 | 70 | 0 |
| 排名退出 · 前1000名 · 持2只 / 最少2日 | +17.45% | +23.96% | -31.98% | 0.66 | 745.90 | 22 | 0 |
| 排名退出 · 前400名 · 持5只 / 最少5日 | +16.88% | +23.39% | -29.08% | 0.70 | 1,291.21 | 98 | 0 |
| 排名退出 · 前500名 · 持5只 / 最少5日 · 止损10% | +14.17% | +20.68% | -30.77% | 0.61 | 1,322.30 | 102 | 0 |
| 排名退出 · 前800名 · 持5只 / 最少5日 | +13.89% | +20.40% | -30.45% | 0.61 | 1,038.49 | 78 | 0 |
| 排名退出 · 前1000名 · 持5只 / 最少5日 | +13.81% | +20.32% | -30.64% | 0.62 | 896.44 | 68 | 0 |
| Top5 每1交易日 | +11.18% | +17.69% | -33.83% | 0.50 | 21,166.99 | 1554 | 0 |
| 排名退出 · 前300名 · 持1只 / 最少2日 | +6.84% | +13.35% | -45.07% | 0.36 | 1,491.33 | 20 | 0 |
| 排名退出 · 前300名 · 跳过前1名 · 持2只 / 最少2日 | +5.76% | +12.27% | -35.47% | 0.33 | 2,457.80 | 74 | 0 |
| 排名退出 · 前500名 · 持5只 / 最少5日 · 止损6% | +4.19% | +10.70% | -36.70% | 0.29 | 2,568.97 | 196 | 0 |
| 排名退出 · 前20名 · 持5只 / 最少1日 | +3.29% | +9.80% | -33.84% | 0.26 | 6,357.58 | 516 | 0 |
| Top5 每1交易日 | +2.11% | +8.62% | -37.58% | 0.22 | 16,536.15 | 1294 | 0 |
| 排名退出 · 前500名 · 持5只 / 最少5日 · 止损6% | +1.74% | +8.25% | -37.17% | 0.20 | 2,328.15 | 184 | 0 |
| 排名退出 · 前300名 · 持5只 / 最少2日 | -0.18% | +6.33% | -33.32% | 0.13 | 1,521.03 | 122 | 0 |
| 排名退出 · 前10名 · 持5只 / 最少1日 | -1.16% | +5.35% | -36.52% | 0.10 | 10,392.06 | 842 | 0 |
| Top5 每5交易日 | -2.30% | +4.21% | -32.67% | 0.06 | 4,212.53 | 352 | 0 |
| 排名退出 · 前600名 · 持2只 / 最少2日 · 止损8% · 移动止盈15% | -2.42% | +4.09% | -38.59% | 0.10 | 1,690.26 | 54 | 0 |
| Top5 每20交易日 | -5.04% | +1.47% | -34.06% | -0.03 | 1,373.48 | 120 | 0 |
| 排名退出 · 前300名 · 持2只 / 最少2日 | -5.86% | +0.65% | -38.06% | -0.03 | 1,377.77 | 44 | 0 |
| 排名退出 · 前300名 · 持2只 / 最少2日 · 移动止盈15% | -6.44% | +0.07% | -38.46% | -0.04 | 1,828.61 | 60 | 0 |
| Top1 隔日换手（baseline） | -6.51% | +0.00% | -46.00% | 0.09 | 17,602.55 | 300 | 0 |
| 排名退出 · 前5名 · 持1只 / 最少1日 | -9.64% | -3.13% | -39.99% | -0.03 | 8,361.15 | 142 | 0 |
| 排名退出 · 前10名 · 持1只 / 最少1日 | -11.48% | -4.97% | -40.16% | -0.10 | 6,160.32 | 106 | 0 |
| 排名退出 · 前300名 · 持2只 / 最少2日 · 止损8% | -13.76% | -7.25% | -43.94% | -0.28 | 1,895.35 | 64 | 0 |
| 排名退出 · 前100名 · 跳过前1名 · 持1只 / 最少2日 | -14.74% | -8.23% | -37.45% | -0.11 | 3,953.18 | 74 | 0 |
| 排名退出 · 前300名 · 持2只 / 最少2日 · 止损8% · 移动止盈15% | -15.69% | -9.18% | -44.68% | -0.34 | 1,939.96 | 66 | 0 |
| 排名退出 · 前2名 · 持1只 / 最少1日 | -18.65% | -12.14% | -37.03% | -0.22 | 11,539.76 | 218 | 0 |
| 排名退出 · 前100名 · 持1只 / 最少2日 | -49.62% | -43.11% | -53.56% | -1.73 | 1,608.94 | 36 | 0 |

### 跨折普适性（同一策略跑四折各自的打分）

| 策略 | 折数 | 超 baseline 折数 | 四折中位净收益 | 集成净收益 |
|---|---|---|---|---|
| 排名退出 · 前700名 · 持5只 / 最少5日 · 止损8% | 4 | 4/4 | +28.09% | +49.25% |
| 排名退出 · 前700名 · 持5只 / 最少5日 | 4 | 4/4 | +33.65% | +43.85% |
| 排名退出 · 前800名 · 持5只 / 最少5日 | 4 | 4/4 | +32.94% | +43.85% |
| 排名退出 · 前1000名 · 持5只 / 最少5日 | 4 | 4/4 | +26.85% | +41.35% |
| 排名退出 · 前1500名 · 持5只 / 最少5日 | 4 | 4/4 | +22.65% | +40.84% |
| 排名退出 · 前600名 · 持5只 / 最少5日 | 4 | 4/4 | +32.52% | +36.23% |
| 排名退出 · 前500名 · 持5只 / 最少5日 | 4 | 4/4 | +22.85% | +32.47% |
| 排名退出 · 前500名 · 持5只 / 最少5日 | 4 | 4/4 | +24.84% | +31.91% |
| 排名退出 · 前600名 · 持2只 / 最少2日 | 4 | 4/4 | +25.59% | +28.66% |
| 排名退出 · 前500名 · 持5只 / 最少5日 · 止损8% | 4 | 4/4 | +26.25% | +28.20% |
| 排名退出 · 前400名 · 持5只 / 最少5日 | 4 | 4/4 | +23.14% | +26.51% |
| 排名退出 · 前500名 · 持5只 / 最少5日 · 止损8% | 4 | 4/4 | +24.32% | +26.05% |
| 排名退出 · 前500名 · 持5只 / 最少5日 · 止损8% | 4 | 4/4 | +27.47% | +24.55% |
| 排名退出 · 前500名 · 持5只 / 最少5日 · 止损8% | 4 | 4/4 | +21.90% | +23.97% |
| 排名退出 · 前2000名 · 持5只 / 最少5日 | 4 | 4/4 | +15.20% | +21.98% |
| 排名退出 · 前700名 · 持5只 / 最少5日 | 4 | 4/4 | +26.33% | +18.46% |
| 排名退出 · 前1000名 · 持2只 / 最少2日 | 4 | 4/4 | +31.23% | +17.45% |
| 排名退出 · 前400名 · 持5只 / 最少5日 | 4 | 4/4 | +24.72% | +16.88% |
| 排名退出 · 前1000名 · 持5只 / 最少5日 | 4 | 4/4 | +20.96% | +13.81% |
| 排名退出 · 前300名 · 持1只 / 最少2日 | 4 | 4/4 | +25.94% | +6.84% |
| 排名退出 · 前300名 · 持2只 / 最少2日 | 4 | 4/4 | +21.57% | -5.86% |
| 排名退出 · 前300名 · 持2只 / 最少2日 · 移动止盈15% | 4 | 4/4 | +32.19% | -6.44% |
| 排名退出 · 前1500名 · 持5只 / 最少5日 | 4 | 3/4 | +13.59% | +41.64% |
| 排名退出 · 前600名 · 持5只 / 最少5日 | 4 | 3/4 | +25.04% | +31.30% |
| 排名退出 · 前500名 · 持5只 / 最少5日 | 4 | 3/4 | +14.60% | +26.95% |
| 排名退出 · 前500名 · 跳过前1名 · 持5只 / 最少5日 | 4 | 3/4 | +18.57% | +24.80% |
| 排名退出 · 前500名 · 持5只 / 最少5日 | 4 | 3/4 | +14.03% | +24.77% |
| 排名退出 · 前500名 · 持5只 / 最少5日 · 止损10% | 4 | 3/4 | +6.31% | +23.89% |
| 排名退出 · 前800名 · 持5只 / 最少5日 | 4 | 3/4 | +35.76% | +13.89% |
| Top5 每1交易日 | 4 | 3/4 | -2.41% | +11.18% |
| 排名退出 · 前300名 · 跳过前1名 · 持2只 / 最少2日 | 4 | 3/4 | +7.30% | +5.76% |
| 排名退出 · 前500名 · 持5只 / 最少5日 · 止损6% | 4 | 3/4 | +12.92% | +4.19% |
| 排名退出 · 前20名 · 持5只 / 最少1日 | 4 | 3/4 | +1.05% | +3.29% |
| Top5 每1交易日 | 4 | 3/4 | -6.98% | +2.11% |
| 排名退出 · 前500名 · 持5只 / 最少5日 · 止损6% | 4 | 3/4 | +17.13% | +1.74% |
| 排名退出 · 前300名 · 持5只 / 最少2日 | 4 | 3/4 | +13.69% | -0.18% |
| 排名退出 · 前600名 · 持2只 / 最少2日 · 止损8% · 移动止盈15% | 4 | 3/4 | +9.59% | -2.42% |
| 排名退出 · 前5名 · 持1只 / 最少1日 | 4 | 3/4 | +2.64% | -9.64% |
| 排名退出 · 前10名 · 持1只 / 最少1日 | 4 | 3/4 | -9.74% | -11.48% |
| 排名退出 · 前300名 · 持2只 / 最少2日 · 止损8% | 4 | 3/4 | -4.64% | -13.76% |
| 排名退出 · 前300名 · 持2只 / 最少2日 · 止损8% · 移动止盈15% | 4 | 3/4 | -3.44% | -15.69% |
| 排名退出 · 前2名 · 持1只 / 最少1日 | 4 | 3/4 | -28.44% | -18.65% |
| 排名退出 · 前100名 · 持1只 / 最少2日 | 4 | 3/4 | +16.80% | -49.62% |
| 排名退出 · 前500名 · 持5只 / 最少5日 · 止损10% | 4 | 2/4 | +5.39% | +14.17% |
| 排名退出 · 前10名 · 持5只 / 最少1日 | 4 | 2/4 | -3.09% | -1.16% |
| Top5 每5交易日 | 4 | 2/4 | +9.88% | -2.30% |
| Top5 每20交易日 | 4 | 2/4 | -1.62% | -5.04% |
| 排名退出 · 前100名 · 跳过前1名 · 持1只 / 最少2日 | 4 | 2/4 | -4.14% | -14.74% |
| Top1 隔日换手（baseline） | 4 | 0/4 | -15.69% | -6.51% |

★ 这张表是"普遍有效"的证据：只对集成分数有效、在四折上全输的策略，不能当结论。

### 统一季度策略矩阵（baseline 组 + 集成净收益前 4 的排名退出策略）

| 季度 | 策略 | 净收益 | 最大回撤 | 日频夏普 | 费用/元 | 成交笔数 |
|---|---|---|---|---|---|---|
| 2025Q3 | 排名退出 · 前1000名 · 持5只 / 最少5日 | +25.80% | -4.51% | 3.97 | 235.88 | 23 |
| 2025Q3 | 排名退出 · 前700名 · 持5只 / 最少5日 | +29.04% | -4.51% | 4.40 | 262.00 | 25 |
| 2025Q3 | 排名退出 · 前700名 · 持5只 / 最少5日 · 止损8% | +29.04% | -4.51% | 4.40 | 262.00 | 25 |
| 2025Q3 | 排名退出 · 前800名 · 持5只 / 最少5日 | +29.04% | -4.51% | 4.40 | 262.00 | 25 |
| 2025Q3 | Top1 隔日换手（baseline） | +7.06% | -12.96% | 0.84 | 4,623.81 | 85 |
| 2025Q3 | Top5 每1交易日 | +16.04% | -5.04% | 3.10 | 3,803.42 | 355 |
| 2025Q3 | Top5 每20交易日 | +9.04% | -12.14% | 1.51 | 325.70 | 33 |
| 2025Q3 | Top5 每5交易日 | +17.59% | -8.32% | 2.75 | 1,133.21 | 105 |
| 2025Q4 | 排名退出 · 前1000名 · 持5只 / 最少5日 | +9.83% | -11.37% | 1.87 | 562.19 | 40 |
| 2025Q4 | 排名退出 · 前700名 · 持5只 / 最少5日 | +11.74% | -11.10% | 2.13 | 614.94 | 42 |
| 2025Q4 | 排名退出 · 前700名 · 持5只 / 最少5日 · 止损8% | +11.74% | -11.10% | 2.13 | 614.94 | 42 |
| 2025Q4 | 排名退出 · 前800名 · 持5只 / 最少5日 | +11.74% | -11.10% | 2.13 | 614.94 | 42 |
| 2025Q4 | Top1 隔日换手（baseline） | +35.23% | -9.73% | 3.04 | 5,752.99 | 88 |
| 2025Q4 | Top5 每1交易日 | +20.44% | -13.74% | 2.78 | 5,062.02 | 362 |
| 2025Q4 | Top5 每20交易日 | +12.23% | -13.92% | 1.69 | 368.65 | 30 |
| 2025Q4 | Top5 每5交易日 | +11.73% | -8.94% | 2.01 | 1,212.78 | 92 |
| 2026Q1 | 排名退出 · 前1000名 · 持5只 / 最少5日 | +3.61% | -7.76% | 0.82 | 168.23 | 9 |
| 2026Q1 | 排名退出 · 前700名 · 持5只 / 最少5日 | +1.06% | -9.01% | 0.32 | 230.33 | 13 |
| 2026Q1 | 排名退出 · 前700名 · 持5只 / 最少5日 · 止损8% | +5.74% | -8.42% | 1.16 | 298.17 | 17 |
| 2026Q1 | 排名退出 · 前800名 · 持5只 / 最少5日 | +1.06% | -9.01% | 0.32 | 230.33 | 13 |
| 2026Q1 | Top1 隔日换手（baseline） | -31.38% | -37.22% | -2.63 | 3,639.58 | 56 |
| 2026Q1 | Top5 每1交易日 | -3.74% | -16.83% | -0.29 | 4,169.95 | 292 |
| 2026Q1 | Top5 每20交易日 | -4.85% | -19.55% | -0.49 | 323.39 | 26 |
| 2026Q1 | Top5 每5交易日 | -8.08% | -16.31% | -0.86 | 979.25 | 78 |
| 2026Q2 | 排名退出 · 前1000名 · 持5只 / 最少5日 | -1.26% | -8.97% | -0.28 | 319.85 | 22 |
| 2026Q2 | 排名退出 · 前700名 · 持5只 / 最少5日 | -1.28% | -9.00% | -0.28 | 325.06 | 22 |
| 2026Q2 | 排名退出 · 前700名 · 持5只 / 最少5日 · 止损8% | -2.11% | -7.95% | -0.56 | 369.26 | 24 |
| 2026Q2 | 排名退出 · 前800名 · 持5只 / 最少5日 | -1.28% | -9.00% | -0.28 | 325.06 | 22 |
| 2026Q2 | Top1 隔日换手（baseline） | -5.89% | -27.70% | -0.27 | 3,586.17 | 71 |
| 2026Q2 | Top5 每1交易日 | -24.09% | -30.51% | -3.13 | 3,500.77 | 285 |
| 2026Q2 | Top5 每20交易日 | -18.45% | -25.04% | -2.58 | 355.74 | 31 |
| 2026Q2 | Top5 每5交易日 | -19.11% | -24.25% | -2.56 | 887.28 | 77 |

## 3. 四折稳定性与评价口径

| 来源 | 5d RankIC | ICIR | Σtop1 | 去最好2日Σtop1 | baseline净收益 | 最大回撤 |
|---|---|---|---|---|---|---|
| fold1 | +0.0471 | 0.415 | +0.5473 | +0.2580 | +17.49% | -47.72% |
| fold2 | +0.0510 | 0.469 | +0.4127 | +0.2041 | +9.36% | -33.41% |
| fold3 | +0.0528 | 0.568 | -0.1668 | -0.5322 | -46.32% | -71.08% |
| fold4 | +0.0578 | 0.506 | -0.1232 | -0.4292 | -40.73% | -48.23% |
| ensemble | +0.0578 | 0.514 | +0.2969 | +0.0252 | -6.51% | -46.00% |

- 固定存续、从未ST的2115只股票池存在幸存者偏差；报告不能解释为无偏的全市场实盘收益。
- 次日开盘触及主板限价即保守拒单，停牌拒单；不使用次日全天high/low选择开盘成交。
- 10万元、最多5只、100股整手、T+1；佣金万2.5且最低5元、卖出印花万5、过户万0.1、双边滑点3bp。
- 单笔买入不超过信号日成交额1%；未成交资金留现金，不偷看成交日全天成交额。建仓按1/N预算，持有后权重自然漂移，同票不强制卖买回权重。
- 公司行为用复权比折算经济股数，假设分红立即再投资；这是含费用现金账户模拟，不是逐笔公司行为现金账复原。
- 日频夏普按242日年化，只作描述；季度样本短，不代表稳定预期收益。

## 4. 训练配置与完成记录

用户指定MLP-4linear（337→256→128→32→1）；WPCC权重由预测排名决定，保持参考脚本公式。特征已是当日rank，固定中心化和缺失填0.5；5d单头，batch=4个日截面，AdamW lr=.001、weight_decay=.02，最多30轮。

每季度从 2018 起扩展训练历史，季度前 6 个交易日隔离；4 个历史验证块轮换并 purge/embargo。★ **打分口径：全部轮次的预测取平均**（不再选轮）。val_wei（100×可执行top5的 label_ret_5d 代理收益+0.7×逐日Pearson IC）**只用来决定何时早停**，测试窗不参与任何选择。调度factor=0.5/patience=3/cooldown=2/min_lr=5e-06；6 轮未改善早停，种子 3253–3256。

'| 季度 | 折 | 训练日 | 验证日 | 测试日 | 轮数 | 最佳轮 | 逐轮训练验证秒 | 平均秒/轮 | 进程峰值RSS/GiB |
|---|---|---|---|---|---|---|---|---|---|
| 2025Q3 | 1 | 1351 | 447 | 66 | 15 | 9 | 230.9 | 15.40 | 8.31 |
| 2025Q3 | 2 | 1345 | 447 | 66 | 11 | 5 | 166.6 | 15.15 | 8.31 |
| 2025Q3 | 3 | 1346 | 446 | 66 | 7 | 1 | 108.9 | 15.56 | 8.31 |
| 2025Q3 | 4 | 1352 | 446 | 66 | 7 | 1 | 109.9 | 15.70 | 8.32 |
| 2025Q4 | 1 | 1401 | 463 | 60 | 9 | 3 | 141.4 | 15.72 | 8.31 |
| 2025Q4 | 2 | 1395 | 463 | 60 | 12 | 6 | 183.7 | 15.31 | 8.31 |
| 2025Q4 | 3 | 1395 | 463 | 60 | 8 | 2 | 111.3 | 13.91 | 8.31 |
| 2025Q4 | 4 | 1401 | 463 | 60 | 7 | 1 | 97.7 | 13.96 | 8.29 |
| 2026Q1 | 1 | 1446 | 478 | 56 | 9 | 3 | 125.1 | 13.90 | 8.31 |
| 2026Q1 | 2 | 1440 | 478 | 56 | 13 | 7 | 184.8 | 14.22 | 8.31 |
| 2026Q1 | 3 | 1440 | 478 | 56 | 10 | 4 | 140.0 | 14.00 | 8.32 |
| 2026Q1 | 4 | 1446 | 478 | 56 | 7 | 1 | 104.2 | 14.88 | 8.32 |
| 2026Q2 | 1 | 1488 | 492 | 60 | 10 | 4 | 144.0 | 14.40 | 8.32 |
| 2026Q2 | 2 | 1482 | 492 | 60 | 11 | 5 | 159.6 | 14.51 | 8.29 |
| 2026Q2 | 3 | 1482 | 492 | 60 | 8 | 2 | 110.2 | 13.77 | 8.29 |
| 2026Q2 | 4 | 1488 | 492 | 60 | 8 | 2 | 117.1 | 14.63 | 8.29 |

RSS为各折工作进程生命周期内的系统高水位，后续季度会继承同一进程此前峰值；不能把16个RSS直接相加当容器峰值。逐轮耗时来自完整history，包含恢复断点前已完成轮次，不含数据读取/落盘/最终预测。

## 5. 资源与计算效率

环境：Python 3.14.7，PyTorch 2.11.0+cu128；CPU 配额 25 核、内存硬上限 90 GiB（均现读 cgroup，不写死主机数字）。先4并发，后按用户要求提高到8任务上限；切换时剩6个任务，实际最高6并发，每进程CPU亲和限制为3核。训练结束后才分析。

| 资源/效率项 | 实测值 |
|---|---|
| 活跃运行墙钟合计（不含切换暂停） | 20.10 分钟 |
| 容器总内存采样峰值（含页缓存） | 65.43 GiB / 90 GiB |
| 容器不可回收anon采样峰值 | 48.53 GiB |
| 单工作进程最大RSS高水位 | 8.32 GiB |
| 显存采样峰值 | 2.82 GiB |
| GPU利用率采样均值/峰值 | 37.1% / 99.0% |
| 平均使用CPU核数 | 3.27 / 25 |
| CPU累计使用 | 3939.4 核秒 |
| 完成训练轮数 | 152 |
| 平均/中位单轮耗时 | 14.71 / 14.05 秒 |
| 季度×折训练耗时之和 | 37.26 分钟 |
| 每小时完成模型数 | 47.77 |
| 按全网格计的训练吞吐 | 377,935 股票行·轮/秒（上界，含被掩码剔除行） |
| 本轮新增OOM kill | 0 |

### 并发阶段实测

| 阶段 | 活跃分钟 | 内存峰值/GiB | anon峰值/GiB | 显存峰值/GiB | GPU均值 | 平均CPU核 |
|---|---|---|---|---|---|---|
| 上限8/实际6并发阶段 | 20.10 | 65.43 | 48.53 | 2.82 | 37.1% | 3.27 |

![资源使用曲线](model_pred/charts/resource_usage.png)

容器/GPU数据每2秒采样，因此采样峰值可能低于瞬时峰值；该内核没有memory.peak文件。容器数据包含同容器其他进程。并行耗时之和/墙钟不是严格加速比：没有相同任务的串行对照；不据此声称加速倍数。

## 6. 验证、锚点与复现

数据锚点：`23a6bfa150528094`。模型来源锁定**配方与各数据块SHA**（不哈希源码字节）；原四块训练数据未重建。价格/标签逐格对拍、WPCC参考公式及数值梯度、季度/验证隔离、费用/整手/T+1/卖不出顺延、季度收益复合检查均通过。完成16组模型重载/当日独立推理对拍。

```bash
cd /autodl-fs/data/model/V16
bash train.sh                       # 训练 + 推演 + 评价 + 本报告
/autodl-fs/data/miniconda3/bin/python model.py --rescore   # 只重推演、不重训（口径改动后刷新打分）
```

统一产物：`model_pred/tables/`（`report.json`、`quarterly_summary.csv`、`quarterly_costfree.csv`、`strategy_summary.csv`）；逐日曲线/成交/预测在各source目录；资源原始样本在`logs/resource_usage.csv`，摘要在`logs/resource_summary.json`。
